Add edgeIdsCache to decrease number of calls to db for findRelatedEdgeByEntityId